2003-06-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnometris.schemas.in: Default background has gone from a .png to
	a .jpg.

	* tetris.cpp: Be smart about the transition from the .png files to
	.jpg and use a .jpg extension if the .png one can't be found. 

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Undo the score directory
	changes. It breaks more than it fixes.

	* tetris.cpp (fillMenu): Add support for jpg images as
	backgrounds.

	* pix/Makefile.am (bg_DATA): Use jpegs for the background
	images. This saves a *lot* of space. Quality has been carefully
	adjusted to make sure that the old and new images are visually
	indistinguishable.

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog).

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-05-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* blocks.cpp (blockTable): Changed the way the I piece rotates. It
	now rotates about a central block. No more shifting sideways.

	* tetris.cpp (eventHandler): Fiddling to get the key press handling
	feeling right when a new piece appears.

2003-05-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* tetris.cpp (eventHandler): Rearranged so that the block drops
	when the space bar goes down, not when it comes back up.
	(timeoutHandler): The down key now works for the new block if it
	is held down (and keyboard auto-repeat is enabled).

2003-04-15  Ross Burton  <ross@burtonini.com>

	* tetris.cpp: Actually pass a key name to the sanity check
	function, instead of "". Whoops. Closes #110814.

2003-04-06  Ross Burton  <ross@burtonini.com>

	* tetris.cpp: Remove deprecated calls, fixes Sun builds. Thanks to
	Rich Burridge, closing #109991.

2003-03-07  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Link to the shared games library.

	* tetris.cpp: Add a GConf sanity check.
